--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OriginSix</title>
-
+    <link rel="stylesheet" href="assets/icomoon/style.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
@@ -17,7 +17,17 @@
     <header id="header">
       <nav class="container">
         <a class="logo" href="#">beauty<span>salon.</span></a>
-        <div class="menu">...</div>
+        <div class="menu">
+          <ul class="grid">
+            <li><a class="title" href="#home">Início</a></li>
+            <li><a class="title" href="#about">Sobre</a></li>
+            <li><a class="title" href="#services">Serviços</a></li>
+            <li><a class="title" href="#testimonials">Depoimentos</a></li>
+            <li><a class="title" href="#about">Sobre</a></li>
+          </ul>
+        </div>
+        <div class="toggle icon-menu"></div>
+        <div class="toggle icon-close"></div>
       </nav>
     </header>
 
@@ -31,7 +41,7 @@
             />
           </div>
           <div class="text">
-            <h1>Saúde natural para os seus cabelos</h1>
+            <h2 class="title">Saúde natural para os seus cabelos</h2>
             <p>
               Um salão exclusivo em São Paulo, especializado em tratamentos
               naturais.
@@ -41,9 +51,68 @@
         </div>
       </section>
       <div class="divider-1"></div>
-      <section class="section">
-        <div class="container">outra section</div>
+
+      <section class="section" id="about">  
+        <div class="container grid">
+        <div class="image">
+          <img
+            src="https://images.unsplash.com/photo-1559599101-f09722fb4948?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80"
+            alt="3 mulheres sorrindo"
+          />
+        </div>
+        <div class="text">
+          <h2 class="title">Sobre nós</h2>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+            nihil veniam eaque sunt vero libero natus dolorem alias soluta odio
+            dicta tempora voluptatem cupiditate, tenetur possimus, minus fugit
+            labore sint.
+          </p>
+          <br />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse,
+            dolorem? Provident ut itaque at et deleniti eligendi iure quam,
+            illum a aliquam ducimus commodi ea nemo sed rerum suscipit quidem!
+          </p>
+          <br />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima
+            cupiditate magni libero explicabo! Unde dicta voluptate tenetur
+            quibusdam, sed beatae magni dolor excepturi nam, eaque quod nostrum,
+            distinctio fugiat aliquam.
+          </p>
+        </div>
+      </section>
+
+      <div class="divider-2"></div>
+
+      <section class="section" id="services">
+        <container class="container grid">
+          <header>
+            <h2 class="title">Serviços</h2>
+            <p>Com mais de 10 anos no mercado, o <strong>Beautysalon</strong> já conquistou clientes de inúmeros países com seus tratamentos exclusivos e totalmente naturais</p>
+          </header>
+          <div class="cards grid">
+            <div class="card">
+              <i class="icon-woman-hair"></i>
+              <h3 class="title">Terapia capilar</h3>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias ipsum consequuntur, sequi quas necessitatibus voluptate accusamus impedit dolores, ducimus aspernatur vero in nesciunt iste vel at tempore rem ratione eaque!</p>
+            </div>
+            <div class="card">
+              <i class="icon-trim"></i>
+              <h3 class="title">Cortes</h3>
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, odit architecto quasi voluptate maxime saepe illum aliquid placeat neque, nesciunt numquam! Neque voluptatibus magnam inventore nisi odit necessitatibus adipisci rem?</p>
+            </div>
+            <div class="card">
+              <i class="icon-cosmetic"></i>
+              <h3 class="title">Tratamentos</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci, ratione dolorem quas assumenda deleniti veniam laborum amet cupiditate neque nulla itaque eum odio fugit atque error placeat deserunt? Perferendis, doloribus.</p>
+            </div>
+          </div>
+        </container>
       </section>
     </main>
+
+    <script src="main.js"></script>
   </body>
 </html>
