--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OriginSix</title>
     <link rel="stylesheet" href="assets/icomoon/style.css" />
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+  
+  
   </head>
 
   <body>
@@ -111,8 +114,66 @@
           </div>
         </container>
       </section>
+
+      <div class="divider-1"></div>
+      
+      <section class="section" id="testimonials">
+        <div class="container">
+          <header>
+            <h2 class="title">Depoimentos de quem já passou por aqui</h2>
+          </header>
+          <div class="testimonials swiper-container ">
+            <div class="swiper-wrapper">
+
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia delectus obcaecati aliquam iusto fuga voluptatem magnam voluptatum modi, amet doloremque tempore ratione est consequatur ullam nulla debitis doloribus cumque ipsum.
+                  </p>
+                  <cite>
+                    <img src="https://randomuser.me/api/portraits/women/92.jpg" alt="Foto de Wanessa Souza">
+                    Luiza Souza
+                  </cite>
+                </blockquote>
+              </div>
+  
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia delectus obcaecati aliquam iusto fuga voluptatem magnam voluptatum modi, amet doloremque tempore ratione est consequatur ullam nulla debitis doloribus cumque ipsum.
+                  </p>
+                  <cite>
+                    <img src="https://randomuser.me/api/portraits/men/25.jpg" alt="Foto de Flavio Silva">
+                    Flavio Silva
+                  </cite>
+                </blockquote>
+              </div>
+  
+              <div class="testimonial swiper-slide">
+                <blockquote>
+                  <p>
+                    <span>&ldquo;</span>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia delectus obcaecati aliquam iusto fuga voluptatem magnam voluptatum modi, amet doloremque tempore ratione est consequatur ullam nulla debitis doloribus cumque ipsum.
+                  </p>
+                  <cite>
+                    <img src="https://randomuser.me/api/portraits/men/80.jpg" alt="Foto de Ronaldo Soares">
+                    Ronaldo Soares
+                  </cite>
+                </blockquote>
+              </div>
+            </div>
+
+            <div class="swiper-pagination"></div>
+            
+          </div>
+        </div>
+      </section>
+
     </main>
 
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
